--- a/src/public/style.scss
+++ b/src/public/style.scss
@@ -12,7 +12,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.container {
+.root {
   height: 100vh;
   display: flex;
   flex-direction: column;
